@@ -149,6 +149,7 @@ public class UpdateDeployContext {
 		boolean writtenJnaTmpDir = false;
 		/** Allow accessing internal modules in Java 16+ */
 		boolean writtenIllegalAccessPermit = false;
+		boolean writtenPrivateModulesOpens = false;
 
 		String newMain = mainJarAbsolute ? newMainJar.getAbsolutePath() : newMainJar.getPath();
 		
@@ -217,6 +218,9 @@ public class UpdateDeployContext {
 				 if (rhs.startsWith("--illegal-access=permit")) {
 				       writtenIllegalAccessPermit = true;
 				 }
+				 if (rhs.startsWith("--add-opens=")) {
+				       writtenPrivateModulesOpens = true;
+				 }
 			    }
 			} else if(lowcaseLine.equals("wrapper.restart.reload_configuration=true")) {
 				writtenReload = true;
@@ -263,11 +267,25 @@ public class UpdateDeployContext {
 		// ensure that we have an entry for the JNA tempdir
 		if (!writtenJnaTmpDir) {
 			bw.write("wrapper.java.additional."+count+"=-Djava.io.tmpdir=./tmp/"+'\n');
+			count++;
 		}
 
-		// allow accessing internal modules (required for Java 16+, only supported since Java 9)
+		// allow accessing internal modules (required for Java 16, only supported since Java 9)
 		if (!writtenIllegalAccessPermit && JVMVersion.supportsModules()) {
 			bw.write("wrapper.java.additional."+count+"=--illegal-access=permit"+'\n');
+			count++;
+		}
+		// open internal modules (required for Java 17, only supported since Java 9)
+		if (!writtenPrivateModulesOpens && JVMVersion.supportsModules()) {
+            // WoT: Unable to make field private final java.lang.String java.lang.Enum.name accessible
+			bw.write("wrapper.java.additional."+count+"=--add-opens=java.base/java.lang=ALL-UNNAMED"+'\n');
+			count++;
+            // Unable to make public int java.util.Collections$UnmodifiableCollection.size() accessible
+			bw.write("wrapper.java.additional."+count+"=--add-opens=java.base/java.util=ALL-UNNAMED"+'\n');
+			count++;
+            // Unable to make field private int java.io.FileDescriptor.fd accessible
+			bw.write("wrapper.java.additional."+count+"=--add-opens=java.base/java.io=ALL-UNNAMED"+'\n');
+			count++;
 		}
 
 		for(String s : otherLines)
